--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>TOAST | </title>
+    <title>TOAST研究小组</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -239,6 +239,7 @@
   <li>CVE-2023-32424 (Apple)：苹果指针认证中的一个漏洞，可能允许攻击者绕过苹果指针认证保护机制，并在设备上执行任意代码。</li>
   <li>CVE-2024-27826 (Apple)：苹果神经引擎中的一个整数溢出问题，可能允许攻击者以内核权限执行任意代码。</li>
   <li>CVE-2024-40788 (Apple)：一个类型混淆问题，可能导致任意代码执行。</li>
+  <li>CVE-2024-44199（Apple）、CVE-2024-44197（Apple）、CVE-2024-40854（Apple）</li>
 </ul>
 
 
