--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 <h2 id="成员">成员</h2>
 
 <ul>
-  <li><a href="https://wenboshen.org">申文博</a>，浙江大学百人计划研究员，计算机科学与技术系副主任，曾任三星美国研究院实时内核保护<a href="https://docs.samsungknox.com/admin/fundamentals/whitepaper/samsung-knox-for-android/core-platform-security/real-time-kernel-protection/">（RKP）</a>的技术负责人。他的研究方向为操作系统安全、云原生系统安全以及软件供应链安全，在顶级会议上发表了50余篇论文，并获得了三项杰出论文奖（NDSS 16, AsiaCCS 17, ACSAC 22）。</li>
+  <li><a href="https://wenboshen.org">申文博</a>，浙江大学百人计划研究员，计算机科学与技术系副主任，曾任三星美国研究院实时内核保护<a href="https://docs.samsungknox.com/admin/fundamentals/whitepaper/samsung-knox-for-android/core-platform-security/real-time-kernel-protection/">（RKP）</a>的技术负责人。他的研究方向为操作系统安全、云原生系统安全以及软件供应链安全，在顶级会议上发表了50余篇论文，并获得了四项杰出论文奖（NDSS 16, AsiaCCS 17, ACSAC 22, ESORICS 2024）。</li>
   <li><a href="https://baike.baidu.com/item/%E7%8E%8B%E5%AE%87/60077409">王宇</a>，<a href="https://www.cyberserval.com/us/about">薮猫科技有限公司创始人兼CEO</a>，全球知名安全技术专家，曾参与CCTV中国首部黑客纪录片《我是黑客》。他是GeekPwn的评委，拥有七十余项信息安全专利，曾在Black Hat USA 2014, 2020, 2022 &amp; 2023, Black Hat Asia 2016 &amp; 2021, Black Hat Euro. 2020, DEFCON 26等会议发表议题，并在2020年苹果漏洞CVE榜中全球排名第二。</li>
-  <li><a href="#">殷婷婷</a>，清华大学博士。她设计了<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/yin">KextFuzz</a>，这是一个在苹果芯片上对macOS内核扩展进行模糊测试的工具，多次获得苹果致谢。她的研究成果已发表在CCS、USENIX Security、ICSE和TOSEM等顶级会议和期刊上。</li>
+  <li><a href="#">殷婷婷</a>，清华大学博士，她设计了<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/yin">KextFuzz</a>，这是一个在苹果芯片上对macOS内核扩展进行模糊测试的工具，多次获得苹果致谢。她的研究成果已发表在CCS、USENIX Security、ICSE和TOSEM等顶级会议和期刊上。</li>
   <li><a href="https://zechao.org">蔡泽超</a>，美国哥伦比亚大学博士生，由Jason Nieh和Gail Kaiser教授指导。他获得了浙江大学的硕士学位，师从申文博研究员。他的研究兴趣包括操作系统、计算机体系结构和系统安全。他曾<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/cai-zechao">逆向苹果M1芯片</a>上的指针认证硬件实现及其缺陷并获得了苹果的致谢，研究成果发表于USENIX Security、CCS和Black Hat USA等会议。</li>
-  <li><a href="https://pricx.github.io">朱家迅</a>，浙江大学博士生，AAA战队成员。他的主要研究方向是系统软件逆向、漏洞挖掘与人工智能。在终端系统方面，他还研究了安卓插件虚拟化技术。他的成果发表于ACM CCS、Black Hat USA及USENIX Security等顶级会议，并获得苹果的致谢。</li>
+  <li><a href="https://pricx.github.io">朱家迅</a>，浙江大学博士生，AAA成员。他的主要研究领域包括终端系统软件等。他的成果发表于学术会议如ACM CCS、USENIX Security以及工业会议Black Hat USA等，并获得苹果的致谢，曾获全国大学生信息安全竞赛一等奖。</li>
   <li><a href="https://minghaolin2000.github.io">林明皓</a>，浙江大学科研助理，主要研究方向为逆向工程。他的成果发表于ACM CCS、Black Hat USA Briefing与Arsenal、SpaceSec等，获得苹果的致谢，曾在美国科罗拉多大学实习，并获得DataCon2022物联网安全第一名，DataCon2023漏洞识别第二名，GeekCon2024第一名。</li>
-  <li><a href="#">胡嘉懿</a>，浙江大学24级硕士生，研究方向为系统安全。曾在腾讯玄武安全实验室实习，他的研究成果发表于Black Hat USA 2024和ESORICS 2024。</li>
+  <li><a href="#">胡嘉懿</a>，浙江大学24级硕士生，AAA成员，研究方向为系统安全。曾在腾讯玄武安全实验室实习，他的研究成果发表于Black Hat USA 2024和ESORICS 2024。</li>
 </ul>
 
 <h2 id="publications" style="margin: 2px 0px -15px;">Academic Publications 🗞</h2>
